add interests api
